# Qt_CV_Box

./: CMakeLists.txt  README  c++0x.toolchain.cmake  persona.icns
forms/: JumpToDialog.ui  Mainwindow.ui  ProcessingDialog.ui  SetSequenceDialog.ui
res/: PersonaBoy.qrc  texShader.fsh  texShader.vsh
src/: CCFThread.cpp  CCFThread.h  CVBufferThread.cpp  CVBufferThread.h  CVTask.cpp  CVTask.h  CVThread.cpp  CVThread.h  CVWIdget.h  CVWidget.cpp  CVWidget.h  Colormap.cpp  FastSalience.cpp  Fbo.cpp  Fbo.h  JumpToDialog.cpp  JumpToDialog.h  KinectDevice.cpp  KinectDevice.h  ProcessingDialog.cpp  ProcessingDialog.h  ScanFilesThread.cpp  ScanFilesThread.h  SetSequenceDialog.cpp  SetSequenceDialog.h  Shader.cpp  Shader.h  Singleton.h  Texture.cpp  Texture.h  ThreadSafeQueue.h  Trajector.cpp  Trajector.h  axiscamera.cpp  axiscamera.h  core_profile_attributes.mm  main.cpp  mainwindow.cpp  mainwindow.h
